--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name=".EditTask"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+        android:name=".About"
+        android:exported="true"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
     </application>
 </manifest>
