--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         android:name=".About"
         android:exported="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity android:name=".Base64String" android:exported="true"/>
 
     </application>
 </manifest>
