--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,27 @@
-name: Android CI
+name: Build APK
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - master  # Change to your target branch
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'  # Specify your Java version
+
+      - name: Build APK
+        run: ./gradlew assembleRelease  # Adjust if you need debug APK
+      
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: vremia-apk
+          path: app/build/outputs/apk/release/vremia-release.apk  # Adjust path as necessary
