--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'  # Specify Java distribution
           java-version: '17'  # Specify your Java version
 
       - name: Build APK
