--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,11 +18,14 @@ jobs:
           distribution: 'temurin'  # Specify Java distribution
           java-version: '17'  # Specify your Java version
 
+      - name: Grant execute permission to Gradle
+        run: chmod +x gradlew
+
       - name: Build APK
-        run: ./gradlew assembleRelease  # Adjust if you need debug APK
-      
+        run: ./gradlew assembleRelease
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: vremia-apk
-          path: app/build/outputs/apk/release/vremia-release.apk  # Adjust path as necessary
+          path: app/build/outputs/apk/release/*.apk  # Upload all APKs in the release folder
