--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'  # Specify Java distribution
-          java-version: '15'  # Specify your Java version
+          java-version: '17.0.0+35'  # Specify your Java version
 
       - name: Grant execute permission to Gradle
         run: chmod +x gradlew
